--- a/package.json
+++ b/package.json
@@ -18,22 +18,37 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.16",
+    "@heroicons/react": "^2.0.18",
+    "@typegoose/typegoose": "^11.4.1",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "clsx": "^1.2.1",
+    "framer-motion": "^10.15.2",
+    "jsonwebtoken": "^9.0.1",
     "lucide-react": "^0.260.0",
+    "mongoose": "^7.4.3",
+    "mongoose-validator": "^2.1.0",
     "next": "^13.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "tailwind-merge": "^1.13.2"
+    "tailwind-merge": "^1.13.2",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
     "@commitlint/config-conventional": "^16.2.4",
-    "@tailwindcss/forms": "^0.5.4",
     "@svgr/webpack": "^8.0.1",
+    "@tailwindcss/forms": "^0.5.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/cookie": "^0.5.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/react": "^18.2.15",
+    "@types/validator": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.14",
